--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   height: 982px;
   margin: auto;
   background: linear-gradient(113deg, #fff 0.28%, rgba(70, 97, 115, 0) 178.65%);
+  
 }
 header {
   display: flex;
@@ -15,7 +16,14 @@ header {
   align-items: center;
   padding: 60px 80px;
 }
-
+header button{
+  color: rgba(255, 255, 255, 0.80);
+  background-color: #f88508;
+text-align: center;
+font-family: Poppins;
+padding: 20px;
+border-radius: 20px;
+}
 .toogle_switch {
   width: 99.01px;
   height: 37.985px;
@@ -76,6 +84,9 @@ header {
 }
 
 .time-box {
+  border-radius: 40px;
+  border-radius: 30px;
+  background: #D9D9D9;
   margin-top: 50px;
   width: 590px;
   height: 400px;
@@ -108,6 +119,8 @@ header {
 }
 
 .weather {
+  border-radius: 30px;
+background: #D9D9D9;
   margin-top: 50px;
   width: 850px;
   height: 400px;
@@ -119,6 +132,7 @@ header {
   align-items: center;
   padding: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  
 }
 
 .flex-box {
@@ -326,6 +340,8 @@ header {
   flex-shrink: 0;
 }
 .round {
+  margin: 13px 5px;
+  text-align: center;
   width: 110px;
   height: 270px;
   flex-shrink: 0;
